fix. 

1596240: Fixed bug when displaying HSQLDB->Objects->Content, where contents are not shown and exceptions are 
thrown because tables are not being qualified with the schema name.

1541325: (Derby) Connection doesn't close when ending session - thanks goes to Alex Pivovarov for the 
                 patch that fixed the issue. 

Fixed identifier qualification in Progress - tested on OpenEdge 10.1C.  Now only schema is pre-fixed to 
identifiers, instead of catalog and schema.

Code Completion Plugin:
 - Made column completion available for databases/JDBC drivers that support catalogs and/or schemas
   but don't provide catalog or schemas in their column meta data. For example some versions of MySQL
   show this behavior.

DBCopy Plugin:
 - Only attempt to order the tables being copied if there is more than one table in the copy set.

Changing to another window using Alt + left/right arrow did not properly set focus.

Hibernate Plugin: 
 - Class names in completion list could change from fully qualified to simple
   while scrolling through the completion list.
 - When a statement like "Fixed identifier qualification in Progress - tested on OpenEdge 10.1C.  Now only schema is pre-fixed to identifiers, instead of catalog and schema.from Kv k where k." was completed the 
   fields for k. would come from any arbitrary mapped class which name started 
   with Kv

Refactoring Plugin: When generating DROP TABLE statements, Frontbase requires
CASCADE or RESTRICT.  Now we append CASCADE to the DROP TABLE statement.

1830649: Focus Loss
1820792: Sybase ASE - table not shown in object browser
1821354: Changing default value of a column in Derby does nothing
1820214: 2.5.1 DB aliases do not transfer properly to 2.6.1
1820020: modified tables aren't sorted
1815667: Create Table Script does not include column defaults

Syntax Plugin: Fixed memory leak which caused sessions not to be garbage 
collected.
